[package]
name = "nih_plug_iced"
version = "0.0.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

description = "An adapter to use iced GUIs with NIH-plug"

[features]
default = []

# NOTE: wgpu support has been removed from the iced-baseview fork out because
#       this old iced version uses a wgpu version that doesn't pin the web-sys
#       version it uses, and web-sys broke semver
# # Use wgpu rendering, which translates to Vulkan, Metal, or Direct3D12 depending
# # on the platform.
# # NOTE: The OpenGL support in baseview is not used, this is just a workaround
# #       for a rust analyzer bug. See the comment in lib.rs.
# wgpu = ["iced_baseview/wgpu", "baseview/opengl"]
# Use OpenGL instead of wgpu for the rendering. This should increase platform
# compatibility at the cost of some iced features not being available.
# opengl = ["iced_baseview/glow"]

# Enables a debug view in native platforms (press F12)
debug = ["iced_baseview/debug"]

wgpu = ["iced_baseview/wgpu"]
# Enables the `Image` widget, only supported by the wgpu backend
image = ["iced_baseview/image"]
# Enables the `Svg` widget, only supported by the wgpu backend
svg = ["iced_baseview/svg"]
# Enables the `Canvas` widget for the wgpu backend
canvas = ["iced_baseview/canvas"]

[dependencies]
nih_plug = { path = "..", default_features = false }
nih_plug_assets = { git = "https://github.com/robbert-vdh/nih_plug_assets.git" }

# The currently targeted version of baseview uses a different version of
# `raw_window_handle` than NIH-plug, so we need to manually convert between them
raw-window-handle = "0.5"

atomic_refcell = "0.1"
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "579130ecb4f9f315ae52190af42f0ea46aeaa4a2" }
crossbeam = "0.8"
# This targets iced 0.13
iced_baseview = { git = "https://github.com/BillyDM/iced_baseview.git", rev = "a0842a8205c852127981e27de6342cf2e665562f", default_features = false }
futures-util = "0.3"

# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
