[package]
name = "nih_plug_xtask"
version = "0.1.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
description = "NIH-plug's cargo xtask command, as a library"
license = "ISC"

[dependencies]
anyhow = "1.0"
goblin = "0.5"
# Version 0.1.3 from crates.io assumes a 64-bit toolchain
reflink = { git = "https://github.com/nicokoch/reflink", rev = "e8d93b465f5d9ad340cd052b64bbc77b8ee107e2" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
