[package]
name = "crisp"
version = "0.1.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/robbert-vdh/nih-plug/tree/master/plugins/crisp"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { path = "../../", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { path = "../../nih_plug_vizia" }
