[package]
name = "diopser"
version = "0.1.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[features]
default = ["simd"]
# Make it go fast, vroom. Requires a nightly compiler. Support for the non-SIMD
# version has been removed at the moment.
simd = ["nih_plug/simd"]

[dependencies]
nih_plug = { path = "../../", features = ["assert_process_allocs"] }
nih_plug_iced = { path = "../../nih_plug_iced" }

# For the GUI
fftw = "0.7"
triple_buffer = "6.0"
