[package]
name = "spectral_compressor"
version = "0.3.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/robbert-vdh/nih-plug/tree/master/plugins/spectral_compressor"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { path = "../../", features = ["assert_process_allocs"] }
nih_plug_vizia = { path = "../../nih_plug_vizia" }

realfft = "3.0"

# For the GUI
crossbeam = "0.8"
open = "3.0"
serde = { version = "1.0", features = ["derive"] }
triple_buffer = "6.2"
