[package]
name = "byo_gui_wgpu"
version = "0.1.0"
edition = "2021"
authors = ["Billy Messenger <60663878+BillyDM@users.noreply.github.com>"]
license = "ISC"

description = "A simple example plugin with a raw WGPU context for rendering"

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { path = "../../../", features = ["assert_process_allocs", "standalone"] }
# NOTE: OpenGL support is not needed here, but rust-analyzer gets confused when
#       some crates do use it and others don't
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "9a0b42c09d712777b2edb4c5e0cb6baf21e988f0", features = ["opengl"]}
wgpu = "25"
raw-window-handle = "0.5"
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6" }
pollster = "0.4.0"
crossbeam = "0.8"
atomic_float = "0.1"
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }