[package]
name = "gain_gui_vizia"
version = "0.1.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

description = "A simple gain plugin with an vizia GUI"

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { path = "../../../", features = ["standalone"] }
nih_plug_vizia = { path = "../../../nih_plug_vizia" }

atomic_float = "0.1"
